# gnome-themes

./: .cvsignore  AUTHORS  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.in  gnome-themes.doap  gnome-themes.spec.in  low-contrast-preset.scm
BSOD/: INSTALL_BSOD  index.theme
BSOD/gtk-2.0/: gtkrc
HighContrast/: Makefile.am  index.theme.in
HighContrast/gtk-2.0/: HighContrast.rc  gtkrc.in
HighContrast/icons/: Makefile.am  index.theme
HighContrast/nautilus/: HighContrast.xml  Makefile.am
HighContrastInverse/: Makefile.am  index.theme.in
HighContrastInverse/gtk-2.0/: .cvsignore  HighContrastInverse.rc  gtkrc.in
HighContrastInverse/icons/: Makefile.am  index.theme
HighContrastInverse/nautilus/: HighContrastInverse.xml  Makefile.am
HighContrastLargePrint/: Makefile.am  index.theme.in.in
HighContrastLargePrint/gtk-2.0/: HighContrastLargePrint.rc  Makefile.am  gtkrc.in
HighContrastLargePrint/icons/: Makefile.am  index.theme
HighContrastLargePrint/icons/48x48/filesystems/: Makefile.am
HighContrastLargePrint/icons/48x48/mimetypes/: Makefile.am
HighContrastLargePrint/nautilus/: HighContrastLargePrint.xml  Makefile.am
HighContrastLargePrint/pixmaps/: HighContrastLargePrint.makefile  Makefile.am
HighContrastLargePrintInverse/: .cvsignore  Makefile.am  index.theme.in.in
HighContrastLargePrintInverse/gtk-2.0/: HighContrastLargePrintInverse.rc  Makefile.am  gtkrc.in
HighContrastLargePrintInverse/icons/: index.theme
HighContrastLargePrintInverse/icons/48x48/apps/: Makefile.am
HighContrastLargePrintInverse/icons/48x48/devices/: Makefile.am
HighContrastLargePrintInverse/nautilus/: HighContrastLargePrintInverse.xml  Makefile.am
HighContrastLargePrintInverse/pixmaps/: HighContrastLargePrintInverse.makefile  Makefile.am
LargePrint/: Makefile.am  index.theme.in.in
LargePrint/gtk-2.0/: LargePrint.rc  gtkrc.in
LargePrint/pixmaps/: LargePrint.makefile  Makefile.am
LowContrast/: Makefile.am  index.theme.in
LowContrast/icons/48x48/apps/: Makefile.am
LowContrastLargePrint/: Makefile.am  index.theme.in.in
LowContrastLargePrint/icons/48x48/apps/: Makefile.am
LowContrastLargePrint/nautilus/sidebar_tab_pieces/: Makefile.am
common/: all-stock-icons.data  capplet-stock-icons.rc  gtk-stock-icons.rc  media-stock-icons.rc  mkiconlinks.sh  panel-stock-icons.rc
desktop-themes/: Makefile.am
gorilla/: index.theme
gtk-engines/: Makefile.am
gtk-themes/: Makefile.am
gtk-themes/Crux/: ChangeLog  Makefile.am  gtkrc  gtkrc.in  make-gtkrc.pl
gtk-themes/Crux/src/: Makefile.am  crux-draw.c  crux-pixmaps.c  test.glade1
gtk-themes/LightHouseBlue/src/: Makefile.am
gtk-themes/SimplySmooth/: Makefile.am  gtkrc
icon-themes/: Makefile.am
icon-themes/Crux/: Makefile.am  index.theme.in
icon-themes/Crux/16x16/actions/: Makefile.am  Makefile.am~
icon-themes/Crux/16x16/places/: Makefile.am  folder-saved-search.xcf.bz2  folder.xcf.bz2
icon-themes/Crux/16x16/status/: Makefile.am  Makefile.am~
icon-themes/Crux/22x22/actions/: Makefile.am  document-open.xcf.bz2
icon-themes/Crux/22x22/places/: Makefile.am
icon-themes/Crux/22x22/status/: folder-visiting.xcf.bz2
icon-themes/Crux/24x24/actions/: Makefile.am
icon-themes/Crux/32x32/status/: Makefile.am
icon-themes/Crux/48x48/filesystems/: gnome-fs-directory.icon  gnome-fs-regular.icon
icon-themes/Crux/scalable/actions/: Makefile.am
icon-themes/Flat-Blue/: .cvsignore  Makefile.am  index.theme.in
icon-themes/Flat-Blue/48x48/filesystems/: gnome-fs-directory-accept.icon  gnome-fs-directory.icon  gnome-fs-regular.icon
icon-themes/HighContrast-SVG/: Makefile.am  index.theme.in
icon-themes/HighContrast-SVG/48x48/animations/: Makefile.am
icon-themes/HighContrast-SVG/scalable/: Makefile.am
icon-themes/HighContrast-SVG/scalable/actions/: Makefile.am
icon-themes/HighContrast-SVG/scalable/actions-extra/: Makefile.am
icon-themes/HighContrast-SVG/scalable/apps/: Makefile.am
icon-themes/HighContrast-SVG/scalable/apps-extra/: Makefile.am
icon-themes/HighContrast-SVG/scalable/categories/: Makefile.am
icon-themes/HighContrast-SVG/scalable/categories-extra/: Makefile.am
icon-themes/HighContrast-SVG/scalable/devices/: Makefile.am
icon-themes/HighContrast-SVG/scalable/devices-extra/: Makefile.am
icon-themes/HighContrast-SVG/scalable/emblems/: Makefile.am
icon-themes/HighContrast-SVG/scalable/emotes/: Makefile.am
icon-themes/HighContrast-SVG/scalable/mimetypes/: Makefile.am
icon-themes/HighContrast-SVG/scalable/places/: Makefile.am
icon-themes/HighContrast-SVG/scalable/places-extra/: Makefile.am
icon-themes/HighContrast-SVG/scalable/status/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/actions/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/apps/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/categories/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/devices/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/emblems/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/mimetypes/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/places/: Makefile.am
icon-themes/HighContrastLargePrint/48x48/status/: Makefile.am
icon-themes/HighContrastLargePrintInverse/36x36/: Makefile.am
icon-themes/HighContrastLargePrintInverse/36x36/animations/: Makefile.am
icon-themes/HighContrastLargePrintInverse/36x36/apps/: Makefile.am
icon-themes/Sandy/: Makefile.am
icon-themes/Smokey-Blue/: Makefile.am  index.theme.in
icon-themes/Smokey-Red/: Makefile.am  index.theme.in
icon-themes/Smokey-Red/48x48/filesystems/: gnome-fs-directory.icon
metacity-themes/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  (+50 more)
trunk/: .cvsignore  ChangeLog  NEWS
trunk/po/: LINGUAS  (+45 more)
(+235 files in other folders)
