SUBDIRS=	po common HighContrast LargePrint LowContrastLargePrint \
		HighContrastLargePrint  LowContrast \
		HighContrastLargePrintInverse HighContrastInverse

EXTRA_DIST = \
	low-contrast-preset.scm \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update
